# pupperv3-monorepo

./: .gitattributes  .gitignore  CLAUDE.md  README.md  install_dev_dependencies.sh
ai/llm-ui/agent-starter-python/: install_service.sh  llm-agent.service  pyproject.toml  run.sh
ai/llm-ui/live-audio/: audio-manager.ts  index.tsx  package.json  pyproject.toml  robot-face.ts  robot_server.py  session-manager.ts  spectrogram.ts  styles.ts  template.ts  tools.ts  visualizer-manager.ts  vite.config.ts
ai/llm-ui/live-audio-original/: index.tsx  package-lock.json  package.json
ai/llm-ui/moonshine-test/: offline_test.py
ai/llm-ui/ui-rs/: Cargo.toml
ai/playground/image-description-benchmark/: .gitignore  main.py  pyproject.toml
ai/playground/livekit-tracing/: main.py  pyproject.toml
ai/playground/undistory/: main.py
infra/pupper_image_builder/: .env.example  .gitignore  make_pios_ai_image.sh  make_pios_base_image.sh  make_pios_full_image.sh  make_server_image.sh  pios_ai_arm64.pkr.hcl  pios_base_arm64.pkr.hcl  pios_full_arm64.pkr.hcl  provision_pios_ai.sh  provision_pios_base.sh  provision_pios_full.sh  readme.md  ubuntu_desktop_full_24.04_arm64.pkr.hcl
infra/pupper_image_builder/resources/: firstrun.sh  ros-jazzy-desktop-0.3.2_20250202_arm64.deb
infra/pupper_image_builder/setup_scripts/: github_auth.sh  install_hailo.sh  install_pupper_ros_packages.sh  install_ros_base.sh
pupper-rs/: Cargo.toml  config.toml  install_service.sh  justfile  pupper-gui.service  run_gui.sh
pupper-rs/src/: config.rs  detection.rs  main.rs
pupper-rs/src/eyes/: animation.rs  drawing.rs  mod.rs  tracking.rs
pupper-rs/src/system/: battery.rs  cpu.rs  mod.rs  (+2 more)
robot/services/: volume-max.service
robot/utils/: check_batt_voltage.py  robot.service  robot.sh
ros2_ws/: build.sh
ros2_ws/src/animation_controller/: CMakeLists.txt  README.md  animation_controller.xml  package.xml
ros2_ws/src/animation_controller/include/animation_controller/: animation_controller.hpp
ros2_ws/src/animation_controller/launch/: animation_config.yaml  animation_playback.launch.py  example_animation.csv
ros2_ws/src/animation_controller/src/: animation_controller.cpp  animation_controller_parameters.yaml
scripts/: mcap_to_csv.py
(+78 files in other folders)
